# Webserv

./: .README.md.swp  .clang-format  .clangd  .gitignore  @  CMakeCache.txt  CMakeLists.txt  HttpResponse.cpp  Makefile  README.md  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Route.cpp  Route.hpp  RouterBuilder.cpp  RouterBuilder.hpp  Server.cpp  Server.hpp  ServerBuilder.cpp  ServerBuilder.hpp  ServerPoll.cpp  ServerPoll.hpp  Webserver  Webserver_extra  Webserver_fast  a.cpp  a.out  abs.hpp  c.txt  check_path.cpp  cmake_install.cmake  conf  conf_example  config  config_content.tldr  doc  generate_indexing.cpp  imb  (+43 more)
New/: TcpStream.cpp  TcpStream.hpp  a.out  kqueue.cpp  kqueue.hpp  main.cpp  server_interface.hpp  streamer_interface.hpp  tcpListener.cpp  tcpListener.hpp
Response/: HTTP_Response.cpp  Serverspack.cpp  plan.tldr
parsing/: README.md  conf2  location.cpp  location.hpp  main.cpp  parser.cpp  parser.hpp  server.hpp  serverInfo.cpp  serverInfo.hpp  test_idea.cpp  tokengen.cpp  tokengen.hpp
public/: app.css  delete.html  delete.php  get.php  hello_python.py  image.html  image_test.html  index.html  log_cookies.php  log_session.php  post.html  post.py  python.html  resize-jpg.html  set_cookie.js  set_cookie.php  set_session.php  t.html  test_cookie.html  upload.html
public/errors/: 403.html  404.html
public/upload/: smalfile
socket/: File.cpp  File.hpp  TcpStream.cpp  TcpStream.hpp  kqueue.cpp  kqueue.hpp  listener_interface.hpp  tcpListener.cpp  tcpListener.hpp
test_e/: ff.cpp
